calc/src/calc/parse/calc.output
Terminals which are not used

   INC
   DEC
   LSHIFT
   RSHIFT
   NOT
   IDENT


Grammar

    0 $accept: program $end

    1 program: expression

    2 expression: primary
    3           | ADD expression
    4           | SUB expression
    5           | expression ADD expression
    6           | expression SUB expression
    7           | expression MUL expression
    8           | expression DIV expression
    9           | expression MOD expression
   10           | expression BIT_OR expression
   11           | expression EQUAL expression
   12           | expression NOTEQUAL expression
   13           | expression BIT_AND expression
   14           | expression EXC_OR expression
   15           | expression LOGIC_OR expression
   16           | expression LOGIC_AND expression
   17           | expression ASSIGN expression
   18           | expression ADD_ASSIGN expression
   19           | expression SUB_ASSIGN expression
   20           | expression MUL_ASSIGN expression
   21           | expression DIV_ASSIGN expression
   22           | expression MOD_ASSIGN expression
   23           | expression GT expression
   24           | expression GE expression
   25           | expression LT expression
   26           | expression LE expression
   27           | CHILDA expression
   28           | LP expression RP

   29 primary: INT
   30        | DOUBLE


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 29
DOUBLE (259) 30
ADD (260) 3 5
SUB (261) 4 6
MUL (262) 7
DIV (263) 8
MOD (264) 9
ASSIGN (265) 17
ADD_ASSIGN (266) 18
SUB_ASSIGN (267) 19
MUL_ASSIGN (268) 20
DIV_ASSIGN (269) 21
MOD_ASSIGN (270) 22
EQUAL (271) 11
NOTEQUAL (272) 12
INC (273)
DEC (274)
GT (275) 23
GE (276) 24
LT (277) 25
LE (278) 26
LSHIFT (279)
RSHIFT (280)
NOT (281)
BIT_AND (282) 13
BIT_OR (283) 10
LOGIC_AND (284) 16
LOGIC_OR (285) 15
LP (286) 28
RP (287) 28
EXC_OR (288) 14
IDENT (289)
CHILDA (290) 27
POSITIVE (291)
NEGATIVE (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 1, on right: 0
expression (40)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28, on right: 1 3 4 5 6 7 8 9 10 11 12 13 14 15
    16 17 18 19 20 21 22 23 24 25 26 27 28
primary (41)
    on left: 29 30, on right: 2


state 0

    0 $accept: . program $end
    1 program: . expression
    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    program     go to state 7
    expression  go to state 8
    primary     go to state 9


state 1

   29 primary: INT .

    $default  reduce using rule 29 (primary)


state 2

   30 primary: DOUBLE .

    $default  reduce using rule 30 (primary)


state 3

    2 expression: . primary
    3           | . ADD expression
    3           | ADD . expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 10
    primary     go to state 9


state 4

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    4           | SUB . expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 11
    primary     go to state 9


state 5

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   28           | LP . expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 12
    primary     go to state 9


state 6

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   27           | CHILDA . expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 13
    primary     go to state 9


state 7

    0 $accept: program . $end

    $end  shift, and go to state 14


state 8

    1 program: expression .  [$end]
    5 expression: expression . ADD expression
    6           | expression . SUB expression
    7           | expression . MUL expression
    8           | expression . DIV expression
    9           | expression . MOD expression
   10           | expression . BIT_OR expression
   11           | expression . EQUAL expression
   12           | expression . NOTEQUAL expression
   13           | expression . BIT_AND expression
   14           | expression . EXC_OR expression
   15           | expression . LOGIC_OR expression
   16           | expression . LOGIC_AND expression
   17           | expression . ASSIGN expression
   18           | expression . ADD_ASSIGN expression
   19           | expression . SUB_ASSIGN expression
   20           | expression . MUL_ASSIGN expression
   21           | expression . DIV_ASSIGN expression
   22           | expression . MOD_ASSIGN expression
   23           | expression . GT expression
   24           | expression . GE expression
   25           | expression . LT expression
   26           | expression . LE expression

    ADD         shift, and go to state 15
    SUB         shift, and go to state 16
    MUL         shift, and go to state 17
    DIV         shift, and go to state 18
    MOD         shift, and go to state 19
    ASSIGN      shift, and go to state 20
    ADD_ASSIGN  shift, and go to state 21
    SUB_ASSIGN  shift, and go to state 22
    MUL_ASSIGN  shift, and go to state 23
    DIV_ASSIGN  shift, and go to state 24
    MOD_ASSIGN  shift, and go to state 25
    EQUAL       shift, and go to state 26
    NOTEQUAL    shift, and go to state 27
    GT          shift, and go to state 28
    GE          shift, and go to state 29
    LT          shift, and go to state 30
    LE          shift, and go to state 31
    BIT_AND     shift, and go to state 32
    BIT_OR      shift, and go to state 33
    LOGIC_AND   shift, and go to state 34
    LOGIC_OR    shift, and go to state 35
    EXC_OR      shift, and go to state 36

    $default  reduce using rule 1 (program)


state 9

    2 expression: primary .

    $default  reduce using rule 2 (expression)


state 10

    3 expression: ADD expression .  [$end, ADD, SUB, MUL, DIV, MOD, EQUAL, NOTEQUAL, GT, GE, LT, LE, BIT_AND, BIT_OR, LOGIC_AND, LOGIC_OR, RP, EXC_OR]
    5           | expression . ADD expression
    6           | expression . SUB expression
    7           | expression . MUL expression
    8           | expression . DIV expression
    9           | expression . MOD expression
   10           | expression . BIT_OR expression
   11           | expression . EQUAL expression
   12           | expression . NOTEQUAL expression
   13           | expression . BIT_AND expression
   14           | expression . EXC_OR expression
   15           | expression . LOGIC_OR expression
   16           | expression . LOGIC_AND expression
   17           | expression . ASSIGN expression
   18           | expression . ADD_ASSIGN expression
   19           | expression . SUB_ASSIGN expression
   20           | expression . MUL_ASSIGN expression
   21           | expression . DIV_ASSIGN expression
   22           | expression . MOD_ASSIGN expression
   23           | expression . GT expression
   24           | expression . GE expression
   25           | expression . LT expression
   26           | expression . LE expression

    ASSIGN      shift, and go to state 20
    ADD_ASSIGN  shift, and go to state 21
    SUB_ASSIGN  shift, and go to state 22
    MUL_ASSIGN  shift, and go to state 23
    DIV_ASSIGN  shift, and go to state 24
    MOD_ASSIGN  shift, and go to state 25

    $default  reduce using rule 3 (expression)

    Conflict between rule 3 and token ADD resolved as reduce (ADD < POSITIVE).
    Conflict between rule 3 and token SUB resolved as reduce (SUB < POSITIVE).
    Conflict between rule 3 and token MUL resolved as reduce (MUL < POSITIVE).
    Conflict between rule 3 and token DIV resolved as reduce (DIV < POSITIVE).
    Conflict between rule 3 and token MOD resolved as reduce (MOD < POSITIVE).
    Conflict between rule 3 and token ASSIGN resolved as shift (POSITIVE < ASSIGN).
    Conflict between rule 3 and token ADD_ASSIGN resolved as shift (POSITIVE < ADD_ASSIGN).
    Conflict between rule 3 and token SUB_ASSIGN resolved as shift (POSITIVE < SUB_ASSIGN).
    Conflict between rule 3 and token MUL_ASSIGN resolved as shift (POSITIVE < MUL_ASSIGN).
    Conflict between rule 3 and token DIV_ASSIGN resolved as shift (POSITIVE < DIV_ASSIGN).
    Conflict between rule 3 and token MOD_ASSIGN resolved as shift (POSITIVE < MOD_ASSIGN).
    Conflict between rule 3 and token EQUAL resolved as reduce (EQUAL < POSITIVE).
    Conflict between rule 3 and token NOTEQUAL resolved as reduce (NOTEQUAL < POSITIVE).
    Conflict between rule 3 and token GT resolved as reduce (GT < POSITIVE).
    Conflict between rule 3 and token GE resolved as reduce (GE < POSITIVE).
    Conflict between rule 3 and token LT resolved as reduce (LT < POSITIVE).
    Conflict between rule 3 and token LE resolved as reduce (LE < POSITIVE).
    Conflict between rule 3 and token BIT_AND resolved as reduce (BIT_AND < POSITIVE).
    Conflict between rule 3 and token BIT_OR resolved as reduce (BIT_OR < POSITIVE).
    Conflict between rule 3 and token LOGIC_AND resolved as reduce (LOGIC_AND < POSITIVE).
    Conflict between rule 3 and token LOGIC_OR resolved as reduce (LOGIC_OR < POSITIVE).
    Conflict between rule 3 and token EXC_OR resolved as reduce (EXC_OR < POSITIVE).


state 11

    4 expression: SUB expression .  [$end, ADD, SUB, MUL, DIV, MOD, EQUAL, NOTEQUAL, GT, GE, LT, LE, BIT_AND, BIT_OR, LOGIC_AND, LOGIC_OR, RP, EXC_OR]
    5           | expression . ADD expression
    6           | expression . SUB expression
    7           | expression . MUL expression
    8           | expression . DIV expression
    9           | expression . MOD expression
   10           | expression . BIT_OR expression
   11           | expression . EQUAL expression
   12           | expression . NOTEQUAL expression
   13           | expression . BIT_AND expression
   14           | expression . EXC_OR expression
   15           | expression . LOGIC_OR expression
   16           | expression . LOGIC_AND expression
   17           | expression . ASSIGN expression
   18           | expression . ADD_ASSIGN expression
   19           | expression . SUB_ASSIGN expression
   20           | expression . MUL_ASSIGN expression
   21           | expression . DIV_ASSIGN expression
   22           | expression . MOD_ASSIGN expression
   23           | expression . GT expression
   24           | expression . GE expression
   25           | expression . LT expression
   26           | expression . LE expression

    ASSIGN      shift, and go to state 20
    ADD_ASSIGN  shift, and go to state 21
    SUB_ASSIGN  shift, and go to state 22
    MUL_ASSIGN  shift, and go to state 23
    DIV_ASSIGN  shift, and go to state 24
    MOD_ASSIGN  shift, and go to state 25

    $default  reduce using rule 4 (expression)

    Conflict between rule 4 and token ADD resolved as reduce (ADD < NEGATIVE).
    Conflict between rule 4 and token SUB resolved as reduce (SUB < NEGATIVE).
    Conflict between rule 4 and token MUL resolved as reduce (MUL < NEGATIVE).
    Conflict between rule 4 and token DIV resolved as reduce (DIV < NEGATIVE).
    Conflict between rule 4 and token MOD resolved as reduce (MOD < NEGATIVE).
    Conflict between rule 4 and token ASSIGN resolved as shift (NEGATIVE < ASSIGN).
    Conflict between rule 4 and token ADD_ASSIGN resolved as shift (NEGATIVE < ADD_ASSIGN).
    Conflict between rule 4 and token SUB_ASSIGN resolved as shift (NEGATIVE < SUB_ASSIGN).
    Conflict between rule 4 and token MUL_ASSIGN resolved as shift (NEGATIVE < MUL_ASSIGN).
    Conflict between rule 4 and token DIV_ASSIGN resolved as shift (NEGATIVE < DIV_ASSIGN).
    Conflict between rule 4 and token MOD_ASSIGN resolved as shift (NEGATIVE < MOD_ASSIGN).
    Conflict between rule 4 and token EQUAL resolved as reduce (EQUAL < NEGATIVE).
    Conflict between rule 4 and token NOTEQUAL resolved as reduce (NOTEQUAL < NEGATIVE).
    Conflict between rule 4 and token GT resolved as reduce (GT < NEGATIVE).
    Conflict between rule 4 and token GE resolved as reduce (GE < NEGATIVE).
    Conflict between rule 4 and token LT resolved as reduce (LT < NEGATIVE).
    Conflict between rule 4 and token LE resolved as reduce (LE < NEGATIVE).
    Conflict between rule 4 and token BIT_AND resolved as reduce (BIT_AND < NEGATIVE).
    Conflict between rule 4 and token BIT_OR resolved as reduce (BIT_OR < NEGATIVE).
    Conflict between rule 4 and token LOGIC_AND resolved as reduce (LOGIC_AND < NEGATIVE).
    Conflict between rule 4 and token LOGIC_OR resolved as reduce (LOGIC_OR < NEGATIVE).
    Conflict between rule 4 and token EXC_OR resolved as reduce (EXC_OR < NEGATIVE).


state 12

    5 expression: expression . ADD expression
    6           | expression . SUB expression
    7           | expression . MUL expression
    8           | expression . DIV expression
    9           | expression . MOD expression
   10           | expression . BIT_OR expression
   11           | expression . EQUAL expression
   12           | expression . NOTEQUAL expression
   13           | expression . BIT_AND expression
   14           | expression . EXC_OR expression
   15           | expression . LOGIC_OR expression
   16           | expression . LOGIC_AND expression
   17           | expression . ASSIGN expression
   18           | expression . ADD_ASSIGN expression
   19           | expression . SUB_ASSIGN expression
   20           | expression . MUL_ASSIGN expression
   21           | expression . DIV_ASSIGN expression
   22           | expression . MOD_ASSIGN expression
   23           | expression . GT expression
   24           | expression . GE expression
   25           | expression . LT expression
   26           | expression . LE expression
   28           | LP expression . RP

    ADD         shift, and go to state 15
    SUB         shift, and go to state 16
    MUL         shift, and go to state 17
    DIV         shift, and go to state 18
    MOD         shift, and go to state 19
    ASSIGN      shift, and go to state 20
    ADD_ASSIGN  shift, and go to state 21
    SUB_ASSIGN  shift, and go to state 22
    MUL_ASSIGN  shift, and go to state 23
    DIV_ASSIGN  shift, and go to state 24
    MOD_ASSIGN  shift, and go to state 25
    EQUAL       shift, and go to state 26
    NOTEQUAL    shift, and go to state 27
    GT          shift, and go to state 28
    GE          shift, and go to state 29
    LT          shift, and go to state 30
    LE          shift, and go to state 31
    BIT_AND     shift, and go to state 32
    BIT_OR      shift, and go to state 33
    LOGIC_AND   shift, and go to state 34
    LOGIC_OR    shift, and go to state 35
    RP          shift, and go to state 37
    EXC_OR      shift, and go to state 36


state 13

    5 expression: expression . ADD expression
    6           | expression . SUB expression
    7           | expression . MUL expression
    8           | expression . DIV expression
    9           | expression . MOD expression
   10           | expression . BIT_OR expression
   11           | expression . EQUAL expression
   12           | expression . NOTEQUAL expression
   13           | expression . BIT_AND expression
   14           | expression . EXC_OR expression
   15           | expression . LOGIC_OR expression
   16           | expression . LOGIC_AND expression
   17           | expression . ASSIGN expression
   18           | expression . ADD_ASSIGN expression
   19           | expression . SUB_ASSIGN expression
   20           | expression . MUL_ASSIGN expression
   21           | expression . DIV_ASSIGN expression
   22           | expression . MOD_ASSIGN expression
   23           | expression . GT expression
   24           | expression . GE expression
   25           | expression . LT expression
   26           | expression . LE expression
   27           | CHILDA expression .  [$end, ADD, SUB, MUL, DIV, MOD, EQUAL, NOTEQUAL, GT, GE, LT, LE, BIT_AND, BIT_OR, LOGIC_AND, LOGIC_OR, RP, EXC_OR]

    ASSIGN      shift, and go to state 20
    ADD_ASSIGN  shift, and go to state 21
    SUB_ASSIGN  shift, and go to state 22
    MUL_ASSIGN  shift, and go to state 23
    DIV_ASSIGN  shift, and go to state 24
    MOD_ASSIGN  shift, and go to state 25

    $default  reduce using rule 27 (expression)

    Conflict between rule 27 and token ADD resolved as reduce (ADD < CHILDA).
    Conflict between rule 27 and token SUB resolved as reduce (SUB < CHILDA).
    Conflict between rule 27 and token MUL resolved as reduce (MUL < CHILDA).
    Conflict between rule 27 and token DIV resolved as reduce (DIV < CHILDA).
    Conflict between rule 27 and token MOD resolved as reduce (MOD < CHILDA).
    Conflict between rule 27 and token ASSIGN resolved as shift (CHILDA < ASSIGN).
    Conflict between rule 27 and token ADD_ASSIGN resolved as shift (CHILDA < ADD_ASSIGN).
    Conflict between rule 27 and token SUB_ASSIGN resolved as shift (CHILDA < SUB_ASSIGN).
    Conflict between rule 27 and token MUL_ASSIGN resolved as shift (CHILDA < MUL_ASSIGN).
    Conflict between rule 27 and token DIV_ASSIGN resolved as shift (CHILDA < DIV_ASSIGN).
    Conflict between rule 27 and token MOD_ASSIGN resolved as shift (CHILDA < MOD_ASSIGN).
    Conflict between rule 27 and token EQUAL resolved as reduce (EQUAL < CHILDA).
    Conflict between rule 27 and token NOTEQUAL resolved as reduce (NOTEQUAL < CHILDA).
    Conflict between rule 27 and token GT resolved as reduce (GT < CHILDA).
    Conflict between rule 27 and token GE resolved as reduce (GE < CHILDA).
    Conflict between rule 27 and token LT resolved as reduce (LT < CHILDA).
    Conflict between rule 27 and token LE resolved as reduce (LE < CHILDA).
    Conflict between rule 27 and token BIT_AND resolved as reduce (BIT_AND < CHILDA).
    Conflict between rule 27 and token BIT_OR resolved as reduce (BIT_OR < CHILDA).
    Conflict between rule 27 and token LOGIC_AND resolved as reduce (LOGIC_AND < CHILDA).
    Conflict between rule 27 and token LOGIC_OR resolved as reduce (LOGIC_OR < CHILDA).
    Conflict between rule 27 and token EXC_OR resolved as reduce (EXC_OR < CHILDA).


state 14

    0 $accept: program $end .

    $default  accept


state 15

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    5           | expression ADD . expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 38
    primary     go to state 9


state 16

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    6           | expression SUB . expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 39
    primary     go to state 9


state 17

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    7           | expression MUL . expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 40
    primary     go to state 9


state 18

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    8           | expression DIV . expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 41
    primary     go to state 9


state 19

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
    9           | expression MOD . expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 42
    primary     go to state 9


state 20

    2 expression: . primary
    3           | . ADD expression
    4           | . SUB expression
    5           | . expression ADD expression
    6           | . expression SUB expression
    7           | . expression MUL expression
    8           | . expression DIV expression
    9           | . expression MOD expression
   10           | . expression BIT_OR expression
   11           | . expression EQUAL expression
   12           | . expression NOTEQUAL expression
   13           | . expression BIT_AND expression
   14           | . expression EXC_OR expression
   15           | . expression LOGIC_OR expression
   16           | . expression LOGIC_AND expression
   17           | . expression ASSIGN expression
   17           | expression ASSIGN . expression
   18           | . expression ADD_ASSIGN expression
   19           | . expression SUB_ASSIGN expression
   20           | . expression MUL_ASSIGN expression
   21           | . expression DIV_ASSIGN expression
   22           | . expression MOD_ASSIGN expression
   23           | . expression GT expression
   24           | . expression GE expression
   25           | . expression LT expression
   26           | . expression LE expression
   27           | . CHILDA expression
   28           | . LP expression RP
   29 primary: . INT
   30        | . DOUBLE

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    ADD     shift, and go to state 3
    SUB     shift, and go to state 4
    LP      shift, and go to state 5
    CHILDA  shift, and go to state 6

    expression  go to state 43
    primary     go to state 9


state 21
